Feat: Finalizando o Crud do projeto